--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@ title: Mocha tests
   <script src="https://cdn.rawgit.com/jquery/jquery/2.1.4/dist/jquery.min.js"></script>
   <script src="http://chaijs.com/chai.js"></script>
   <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
+  <script src="https://cdn.rawgit.com/shouldjs/should.js/master/should.js"></script>
 
   <script>mocha.setup('bdd')</script>
   <script src="bundle.js"></script>
