add Windows95 font

--- a/page-not-found.html
+++ b/page-not-found.html
@@ -8,8 +8,10 @@
   {% include common/favicon.html %}
   {% include common/fontawesome.html %}
   {% include common/style.html %}
+
+  <link rel="preload" as="font" href="/fonts/w95fa.woff2" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
-  <main class="page-not-found">{{ content }}</main>
+  <div class="page-not-found">{{ content }}</div>
 </body>
 </html>
