--- a/page-not-found.html
+++ b/page-not-found.html
@@ -10,6 +10,15 @@
   {% include common/style.html %}
 
   <link rel="preload" as="font" href="/fonts/w95fa.woff2" type="font/woff2" crossorigin="anonymous">
+
+  <style>
+    @font-face {
+      font-family: 'W95FA';
+      src: url('/fonts/w95fa.woff2') format('woff2');
+      font-weight: normal;
+      font-style: normal;
+    }
+  </style>
 </head>
 <body>
   <div class="page-not-found">{{ content }}</div>
