setup tests and examples

--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
     <h1>algebra</h1>
 
     <blockquote>means completeness and balancing, from the Arabic word الجبر</blockquote>
+
+    <section>
+      <h2>Quick start</h2>
+
+      <p>
+      Use the Real numbers operators.
+      </p>
+      <pre><code>
+import { real as R } from "algebra";
+
+R.add(1, 2); // 3
+      </code></pre>
+
+      <p>
+      Play with Complex numbers.
+      </p>
+      <pre><code>
+import { complex as C } from "algebra";
+
+C.add([1, 0], [2, 0]); // [3, 0]
+      </code></pre>
+
+      <script type="module" src="./dist/examples/quick-start.js"></script>
+    </section>
   </main>
+
 </body>
 </html>
