add docs/ folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			name="description"
 			content="means completeness and balancing, from the Arabic word الجبر"
 		/>
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="./docs/style.css" />
 	</head>
 	<body>
 		<main>
