--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 import { R } from 'algebra';
 
 // Create a Real number with a value of 0.1
-const x = R(0.1);
+const x = new R(0.1);
 
 // Add 0.2
 x.add(0.2);
